--- a/app.html
+++ b/app.html
@@ -21,7 +21,7 @@
 		</div>
 		<div id="mainContent" @click.self="clear">
 			<div id="ytPlayer" class="fullWidth"></div>
-			<div id="ytCover"><img src="img/icon.png" style="height: 100%; width: auto;"></div>
+			<div id="ytCover"><img src="img/icon_shadow.png" style="height: 100%; width: auto;"></div>
 			<div id="scrubContainer" class="fullWidth"><div id="scrub"></div></div>
 			<div id="controlsContainer" class="fullWidth" @click="clear">
 				<div id="volumeContainer"><div id="volume"></div></div>
