Adding drag and drop support
There's a bug relating to the border and if you dont move your file over the border quick enough

--- a/app.html
+++ b/app.html
@@ -19,6 +19,9 @@
 			<button id="minimizeButton" @click="minimize" title="Minimize"><i class="fas fa-fw fa-minus"></i></button>
 			<button id="closeButton" @click="close" title="Quit"><i class="fas fa-fw fa-times"></i></button>
 		</div>
+		<div id="drag">
+			<i class="fas fa-download fa-10x"></i>
+		</div>
 		<div id="mainContent" @click.self="clear">
 			<div id="ytPlayer" class="fullWidth"></div>
 			<div id="ytCover"><img src="img/icon_shadow.png" style="height: 100%; width: auto;"></div>
